Bug 129811 - PASV data connection issues r=gagan, sr=darin, a=asa